# bookkeeper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SECRETS_IMPLEMENTATION.md  bookkeeper-ui.html  deploy-full.sh  deploy-mcp.sh  deploy.sh  deploy_agent.py  invoke_agent.py  main_agent.py  pyproject.toml  terraform.tfstate
agents/: __init__.py  base_agent.py  config.py  github_agent.py  gitlab_agent.py  prompts.py  s3_agent.py
docs/: MIGRATION.md  PROJECT_STORY.md  REORGANIZATION_SUMMARY.md
scripts/: deploy_agent.py  invoke_agent.py
src/bookkeeper/: __init__.py
src/bookkeeper/agents/: __init__.py  github.py  gitlab.py  orchestrator.py  prompts.py  s3.py
src/bookkeeper/api/: __init__.py  app.py  models.py  routes.py
src/bookkeeper/core/: __init__.py  config.py
src/bookkeeper/knowledge_base/: __init__.py  manager.py
terraform/: DEPLOYMENT.md  README.md  SECRETS.md  agentcore.tf  bedrock.tf  ecr.tf  iam.tf  main.tf  opensearch.tf  outputs.tf  s3.tf  secrets.tf  terraform.tfvars  terraform.tfvars.example  update-secrets.sh  variables.tf
tests/: __init__.py  conftest.py  test_bedrock.py
